Doing some formatting in framework.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,12 +3,22 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/googletest/include
     )
 
-add_executable(testValues testValues.cpp)
-target_link_libraries(testValues gtest_main disco)
+macro(disco_test DISCO_EXAMPLE_NAME)
+
+    project(${DISCO_EXAMPLE_NAME})
+
+    add_executable(test${DISCO_EXAMPLE_NAME} "test${DISCO_EXAMPLE_NAME}.cpp")
+
+    target_link_libraries(test${DISCO_EXAMPLE_NAME} gtest_main disco)
+
+endmacro()
+
+disco_test(Values)
+disco_test(Interface)
 
 add_test(
     NAME testfwk
-    COMMAND testInterface testNominal testLog testActivity
+    COMMAND testInterface
     )
 
 add_test(
