--- a/disco/modeling/CMakeLists.txt
+++ b/disco/modeling/CMakeLists.txt
@@ -1,8 +1,8 @@
 file(GLOB DISCO_MODELING_SOURCES *.cpp)
 file(GLOB DISCO_MODELING_HEADERS *.h)
 
-add_library(${LIBRARY_NAME}modeling
+add_library(${CMAKE_PROJECT_NAME}modeling SHARED
     ${DISCO_MODELING_SOURCES}
     ${DISCO_MODELING_HEADERS})
 
-install(TARGETS ${LIBRARY_NAME}modeling DESTINATION lib)
+install(TARGETS ${CMAKE_PROJECT_NAME}modeling DESTINATION lib)
