--- a/disco/framework/CMakeLists.txt
+++ b/disco/framework/CMakeLists.txt
@@ -1,8 +1,8 @@
 file(GLOB DISCO_FRAMEWORK_SOURCES *.cpp)
 file(GLOB DISCO_FRAMEWORK_HEADERS *.h)
 
-add_library(${LIBRARY_NAME}framework
+add_library(${CMAKE_PROJECT_NAME}framework SHARED
     ${DISCO_FRAMEWORK_SOURCES}
     ${DISCO_FRAMEWORK_HEADERS})
 
-install(TARGETS ${LIBRARY_NAME}framework DESTINATION lib)
+install(TARGETS ${CMAKE_PROJECT_NAME}framework DESTINATION lib)
