Intermediate progress on Duration.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,27 +3,18 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/googletest/include
     )
 
-macro(disco_test DISCO_EXAMPLE_NAME)
+macro(disco_test DISCO_TEST_NAME)
 
-    project(${DISCO_EXAMPLE_NAME})
+    project(${DISCO_TEST_NAME})
 
-    add_executable(test${DISCO_EXAMPLE_NAME} "test${DISCO_EXAMPLE_NAME}.cpp")
+    add_executable(test${DISCO_TEST_NAME} "test${DISCO_TEST_NAME}.cpp")
 
-    target_link_libraries(test${DISCO_EXAMPLE_NAME} gtest_main disco)
+    target_link_libraries(test${DISCO_TEST_NAME} gtest_main
+        discoframework)
+
+    add_test(NAME test${DISCO_TEST_NAME} COMMAND test${DISCO_TEST_NAME})
 
 endmacro()
 
 disco_test(Values)
 disco_test(Interface)
-
-add_test(
-    NAME testfwk
-    COMMAND testInterface
-    )
-
-add_test(
-    NAME testdisco
-    COMMAND testValues
-    )
-
-
