Remove homebrew quantity framework.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,19 @@ cmake_minimum_required(VERSION 2.6)
 
 # User options
 # -----------------------------------------------------------------------------
-set(DISCO_BUILD_TESTS FALSE CACHE BOOL
-    "Build google-test tests.")
-set(DISCO_BUILD_EXAMPLES FALSE CACHE BOOL
-    "Build examples that illustrate how to use the engine.")
-set(DISCO_BUILD_DOC FALSE CACHE BOOL
-    "Create API documentation (requires Doxygen).")
+option(DISCO_BUILD_TESTS "Set up google-test targets." OFF)
+option(DISCO_BUILD_EXAMPLES
+    "Build examples that illustrate how to use the engine."
+    OFF)
+option(DISCO_BUILD_DOC
+    "Create API documentation (requires Doxygen)."
+    OFF)
 
-# Include headers.
+# Our CMake settings
 # -----------------------------------------------------------------------------
-include_directories(${CMAKE_SOURCE_DIR}/disco)
+# Place libraries in the root of the build directory.
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}) # static
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}) # dynamic
 
 # Build googletest.
 # -----------------------------------------------------------------------------
