--- a/disco/framework/CMakeLists.txt
+++ b/disco/framework/CMakeLists.txt
@@ -5,4 +5,7 @@ add_library(${CMAKE_PROJECT_NAME}framework SHARED
     ${DISCO_FRAMEWORK_SOURCES}
     ${DISCO_FRAMEWORK_HEADERS})
 
-install(TARGETS ${CMAKE_PROJECT_NAME}framework DESTINATION lib)
+install(
+    TARGETS ${CMAKE_PROJECT_NAME}framework
+    DESTINATION ${DISCO_SHARED_LIBRARY_DESTINATION}
+    )
