--- a/disco/modeling/CMakeLists.txt
+++ b/disco/modeling/CMakeLists.txt
@@ -5,4 +5,7 @@ add_library(${CMAKE_PROJECT_NAME}modeling SHARED
     ${DISCO_MODELING_SOURCES}
     ${DISCO_MODELING_HEADERS})
 
-install(TARGETS ${CMAKE_PROJECT_NAME}modeling DESTINATION lib)
+install(
+    TARGETS ${CMAKE_PROJECT_NAME}modeling
+    DESTINATION ${DISCO_SHARED_LIBRARY_DESTINATION}
+    )
