Remove remaining remmance of time-related framework classes.

--- a/disco/framework/CMakeLists.txt
+++ b/disco/framework/CMakeLists.txt
@@ -9,3 +9,5 @@ install(
     TARGETS ${CMAKE_PROJECT_NAME}framework
     DESTINATION ${DISCO_SHARED_LIBRARY_DESTINATION}
     )
+
+# TODO place the above within a CMake macro.
